2004-09-05  Marcus Meissner  <marcus@jet.franken.de>
	
	* ptp-pack.c: Pack integer arrays.
	* library.c: Enabled setting of configuration.
		- Made work and tested:
		* Canon Camera Owner.
		* Canon Time on camera.

	* ptp.[ch]: Make ptp_free_propertyvalue nonstatic.

2004-09-04  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Nikon Coolpix 2200

2004-08-25 Marcus Meissner  <marcus@jet.franken.de>

	* ptp-pack.c, ptp.c, ptp.h: 
	  - Added length parameters to the read functionality 
	    to avoid buffer overflows.
 	  - Added PTPPropertyValues as generic property values.
	  - Rewrote all property handling functions.
	  - Added property array support.
	  - Move property names from ptpcam to libptp.

	* library.c:
	  - Print all available property values with names in --summary
	  - Started generic configuration handling.

2004-08-15  Marcus Meissner  <meissner@suse.de>
	
	* library.c: Added Canon PowerShot A85.
	* library.c: Added Kodak LS753 DX7630 CX7300 CX7220
	   CX7330 CX7530 DX7440 CX6445 as reported on SourceForge
	   http://sourceforge.net/tracker/index.php?func=detail&aid=982934&group_id=8874&atid=358874
	* library.c: Added Nikon Coolpix 4200 (thanks Lars!)

2004-08-15  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added EOS 1D Mark II

2004-08-12  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Canon Powershot S60 as it works.

2004-08-04 Marcus Meissner   <meissner@suse.de>
	
	* Added Canon PowerShot A310 ids as reported.
	* Added Ricoh Caplio GX ids as reported.
	* Added Nikon D70 ids as reported.
	* Added Sony MVC-CD500.

2004-07-16 Mariusz Woloszyn
	* ptp.h: Added NIKON extension code by Corey Manders 

2004-06-23  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Kodak LS-473
	Close RFE #977619 <http://www.gphoto.org/rfe/?id=977619>

2004-06-13  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon PowerShot S1 IS.

2004-05-29 Mariusz Woloszyn